# da-rpc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: docs.yml
components/loader/: Cargo.toml
components/loader/src/: main.rs
components/rpc-client/: Cargo.toml
components/rpc-client/src/: main.rs
components/rpc-daemon/: Cargo.toml
components/rpc-daemon/src/: main.rs
components/rpc-dll/: Cargo.toml
components/rpc-dll/src/: lib.rs  lifecycle.rs
components/rpcd/: Cargo.toml
crates/client-741/: Cargo.toml
crates/client-741/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/win32/: Cargo.toml
crates/win32/src/: lib.rs  lifecycle.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  cli.md  development.md  discovery.md  introduction.md  legal.md  loader.md  protocol.md  roadmap.md  rpc-dll.md  rpcd.md  safety.md  state.md  web-api.md
tools/injection-target/: Cargo.toml
tools/injection-target/src/: main.rs
tools/lifecycle-host/: Cargo.toml
tools/lifecycle-host/src/: main.rs
