[package]
name = "loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }

[dependencies]
darpc-win32.workspace = true

[lints]
workspace = true
