[package]
name = "rpc-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "darpc"
path = "src/main.rs"

[dependencies]
darpc-protocol.workspace = true
darpc-win32.workspace = true

[lints]
workspace = true
