[package]
name = "rpc-dll"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "darpc"
crate-type = ["cdylib"]

[dependencies]
darpc-client-741.workspace = true
darpc-model.workspace = true
darpc-protocol.workspace = true
darpc-win32.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [ "Win32_Foundation", "Win32_System_LibraryLoader"] }

[lints]
workspace = true
